# pelican-installer

./: Cargo.toml  IMPLEMENTATION.md  INSTALL_GUIDE.md  README.md  RUST_IMPLEMENTATION.md  install.sh  main.py  requirements.txt
info/: CONFIGURATION.md  README.md  pelican-installer-plan.md  pelican-installer.py
lib/pelican_installer/: __init__.py  app.py  styles.tcss
lib/pelican_installer/components/: __init__.py  menu.py
lib/pelican_installer/installers/: __init__.py  base.py  dependencies.py  panel.py  wings.py
lib/pelican_installer/screens/: __init__.py  domain.py  install.py  menu.py  protocol.py  ssl.py  summary.py  webserver.py
lib/pelican_installer/utils/: __init__.py  state.py  system.py
scripts/: install_dependencies.sh  install_panel.sh  install_wings.sh
src/: app.rs  error.rs  main.rs
src/installers/: base.rs  dependencies.rs  mod.rs  panel.rs  wings.rs
src/screens/: domain.rs  install.rs  menu.rs  mod.rs  protocol.rs  ssl.rs  summary.rs  webserver.rs
src/ui/: components.rs  layout.rs  mod.rs
src/utils/: mod.rs  state.rs  system.rs
