[package]
name = "pelican-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
unicode-width = "0.1"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["user"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
